--- a/index.html
+++ b/index.html
@@ -1,30 +1,11 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-"http://www.w3.org/TR/html4/loose.dtd">
-<html>
-<head>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 
 <!--This loads jQuery and an extension to jQuery to allow writing to JSON-->
-<script src="http://code.jquery.com/jquery-latest.js"></script>
-<script src="http://www.theargentlark.com/dark-chess/jquery.json.js"></script>
-<script type="application/x-javascript" src="util.js"></script>
-<script type="application/x-javascript" src="misc.js"></script>
+<!--<script src="http://code.jquery.com/jquery-latest.js"></script>-->
+<!--<script src="http://www.theargentlark.com/dark-chess/jquery.json.js"></script>-->
 
-<!--This is your javascript file-->
-<script type="application/x-javascript" src="code.js"></script>
+<script data-main="scripts/main" src="external/require-jquery.js"></script>
 
-<!--Our initial code which calls our Javascript once everything is loaded,
-    we will call init_stats() when all is ready to go.-->
-<script type="text/javascript">
-	$(document).ready(function() {
-		init_game(); 
-	});
-</script>
-
-</head>
-<body>
-
-<canvas id="main_canvas" width="500" height="400">
-</canvas>
-
-</body>
-</html>
+</head><body>
+<canvas id="main_canvas" width="500" height="400"></canvas>
+</body></html>
